# ImmoSync-App

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_REPORT.md  LANDLORD_PAYMENTS_INTEGRATION.md  MANUAL_TESTING_GUIDE.md  MULTILANGUAGE_IMPLEMENTATION.md  NOTIFICATION_IMPLEMENTATION.md  README.md  ROUTE_TROUBLESHOOTING.md  SOCIAL_LOGIN_SETUP.md  STRIPE_CONNECT_API.md  STRIPE_CONNECT_IMPLEMENTATION.md  STRIPE_CONNECT_IMPLEMENTATION_PLAN.md  STRIPE_CUSTOMER_PORTAL.md  TESTING_CHECKLIST.md  TESTING_COMPLETION_SUMMARY.md  TEST_REPORT.md  comprehensive-test.sh  final-test-validation.sh  immolink.env.example  package-lock.json  package.json  setup.ps1  setup.sh  test-notifications.sh  validate-app.sh
.github/: PRECOMMIT_GUIDE.md  SECRETS_SETUP.md  TESTING_GUIDE.md  copilot-instructions.md
.husky/: pre-commit
backend/: .env.example  README_COMPLETE_SETUP.md  check-all-invitations.js  check-images.js  check-test-result.js  cleanup-invitations.js  cleanup-test-invitation.js  clear-tenant-invitations.js  comprehensive-api-test.sh  config.example.js  consolidate-conversations.js  create-sample-conversations.js  create-sample-maintenance-simple.js  create-sample-maintenance.js  create-sample-tenants.js  database.js  database_setup.sql  debug-current-invitations.js  debug-invitation-update.js  debug-markus-invitation.js  debug-tenant-assignment.js  debug-tenant-removal.js  fix-broken-invitations.js  fix-existing-invitation.js  fix-markus-assignment.js  (+17 more)
immolink/native/matrix_bridge/: Cargo.toml  README.md
immolink/native/matrix_bridge/src/: bridge.rs  frb_generated.rs  lib.rs
(+378 files in other folders)
